# test-sse

./: Cargo.toml
client/: main.py  pyproject.toml
src/: main.rs
