[package]
name = "test-sse"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-lab = "0.24.3"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.28" }
